Integrate future injury solid analysis
